toolbar gap, divider width, divider margin fixes

--- a/packages/genesys-spark-components/src/components/beta/gux-rich-text-editor/gux-rich-text-editor.light.scss
+++ b/packages/genesys-spark-components/src/components/beta/gux-rich-text-editor/gux-rich-text-editor.light.scss
@@ -12,7 +12,8 @@
 
   blockquote {
     margin: var(--gse-ui-rte-quoteBlock-margin);
-    border-inline-start: 2px solid #a8b4e2; // Token Required : COMUI-3190
+    border-inline-start: var(--gse-ui-rte-quoteBlock-borderLeft-width) solid
+      var(--gse-ui-rte-quoteBlock-borderLeft-color);
 
     p {
       margin-inline-start: var(--gse-ui-rte-quoteBlock-container-gap);
@@ -32,9 +33,8 @@
     color: var(--gse-ui-rte-codeBlock-foregroundColor);
     white-space: pre-wrap;
     background-color: var(--gse-ui-rte-codeBlock-backgroundColor);
-    border: var(--gse-ui-rte-codeBlock-border-width)
-      var(--gse-ui-rte-codeBlock-border-style)
-      var(--gse-ui-rte-codeBlock-border-color);
-    border-radius: 4px; // Token Required : COMUI-3190
+    border: var(--gse-ui-rte-codeBlock-border-width) var(--gse-ui-rte-codeBlock-border-style)
+      (--gse-ui-rte-codeblock-border-color);
+    border-radius: var(--gse-ui-rte-codeBlock-borderRadius);
   }
 }
